@@ -7,6 +7,7 @@
  • T1 vehicle artillery has faster projectile and does 2x more damage per shot, but also has 2x reloadtime.
  • Removed reverse move
  • Removed air collisions for bombers
+ • Increased maxslope for all units 50% (the slope which it allows to be build)
 
 
 10.23 -> 10.24
